--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,13 +1,36 @@
-
 .home-page {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    font-family: Arial, sans-serif;
 }
 
 .main-content-home {
-  position: relative;
-  width: 100%;
-  flex-grow: 1;
-  padding-top: 70px; 
+    position: relative;
+    flex-grow: 1;
+    height: calc(100vh - 80px); 
+    margin-top: 40px; 
+}
+
+.map-container-view {
+    height: 100%;
+    width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.search-form-container {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 1000;
+    max-width: 350px;
+}
+
+.response-container {
+    position: absolute;
+    top: 150px; 
+    right: 20px;
+    z-index: 1000;
+    max-width: 350px;
 }
