--- a/frontend/src/components/MapView.css
+++ b/frontend/src/components/MapView.css
@@ -1,6 +1,8 @@
-.map-container-view {
+.map-container-view-inner {
   height: 100vh; 
   width: 100%;  
   position: relative;
+  border-radius: 8px;
   z-index: 1; 
 }
+
