--- a/frontend/src/pages/Auth.css
+++ b/frontend/src/pages/Auth.css
@@ -9,7 +9,7 @@
 }
 
 .auth-container {
-  background-color: #fff;
+  background-color: #161414;
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
