--- a/frontend/src/components/SearchForm.css
+++ b/frontend/src/components/SearchForm.css
@@ -28,7 +28,7 @@
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
   width: 250px;
 }
 
@@ -37,7 +37,7 @@
   margin-bottom: 1rem;
   font-size: 1.1rem;
   font-weight: 500;
-  color: var(--secondary-color);
+  color: #0f0f0f;
 }
 
 .input-group {
@@ -47,7 +47,7 @@
 .input-group label {
   display: block;
   font-size: 0.9rem;
-  color: var(--gray-dark);
+  color: #0f0f0f;
   margin-bottom: 4px;
 }
 
